make a tc server distribution